Post images gallery has empty whitespace on the right in mobile - FIXED

--- a/assets/css/partials/_widget_images.scss
+++ b/assets/css/partials/_widget_images.scss
@@ -115,7 +115,9 @@
         overflow: hidden;
         padding:0;
 
-
+        @media screen and (max-width: 420px) {
+          width: 100%;
+        }
       }
     }
   }
